WIP/src/js/lobby.js: connecting mixing-senses.art via API

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,5 +9,5 @@
   <body>
     <div id="mount"></div>
   </body>
-  <script src="../js/exhibition.js"></script>
+  <script src="../js/lobby.js"></script>
 </html>
