WIP: API driven Lobby + Exhibition layout components

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,5 +9,5 @@
   <body>
     <div id="mount"></div>
   </body>
-  <script src="../js/lobby.js"></script>
+  <script src="../js/index.js"></script>
 </html>
