DEL/.gitmodules, EDIT/src/sass: restructure sass folder
+ basic responsive design

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
   <head>
     <base href="/harvester.html/">
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vi.son Exhibition</title>
   </head>
   <body>
